[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ekswokc"
requires-python = ">=3.7"
dependencies = [
    "boto3",
    "kubernetes",
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {""="src"}

[tool.setuptools_scm]
